--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -20,3 +20,19 @@
     line-height: 15px;
   }
 }
+
+
+/* Стили для поля с ошибкой */
+.popup__input_type_error {
+  border-bottom: 1px solid red; /* Красная нижняя граница */
+  outline: none;
+}
+
+/* Стили для текста ошибки */
+.popup__error_visible {
+  color: red;
+  font-size: 12px;
+  line-height: 14px;
+  margin-top: 5px;
+  display: block;
+}
