--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -25,3 +25,16 @@
     line-height: 17px;
   }
 }
+
+/* Стили для неактивной кнопки */
+.popup__button_disabled {
+  background: transparent;
+  border: 1px solid #a0a0a0;
+  color: #a0a0a0;
+  cursor: default;
+  pointer-events: none;
+}
+
+.popup_type_delete .popup__button {
+  margin-top: 38px;
+}
